syntax = "proto3";

package fpstore;
option go_package = "github.com/acoustid/go-acoustid/proto/fpstore;fpstore";

import public "common/fingerprint.proto";

import "google/api/annotations.proto";

message InsertFingerprintRequest {
  common.Fingerprint Fingerprint = 1;
}

message InsertFingerprintResponse {
  uint64 id = 1;
}

message UpdateFingerprintRequest {
  uint64 id = 1;
  common.Fingerprint fingerprint = 2;
}

message UpdateFingerprintResponse {
}

message DeleteFingerprintRequest {
  uint64 id = 1;
}

message DeleteFingerprintResponse {
}

message GetFingerprintRequest {
  uint64 id = 1;
}

message GetFingerprintResponse {
  common.Fingerprint fingerprint = 1;
}

message CompareFingerprintRequest {
  common.Fingerprint fingerprint = 1;
  repeated uint64 ids = 2;
  float min_score = 3;
}

message MatchingFingerprint {
  uint64 id = 1;
  float score = 2;
}

message CompareFingerprintResponse {
  repeated MatchingFingerprint results = 1;
}

message SearchFingerprintRequest {
  common.Fingerprint fingerprint = 1;
  int32 limit = 2;
  bool fast_mode = 3;
  float min_score = 4;
}

message SearchFingerprintResponse {
  repeated MatchingFingerprint results = 1;
}

service FingerprintStore {
  rpc Insert(InsertFingerprintRequest) returns (InsertFingerprintResponse) {
    option (google.api.http) = {
      post: "/v1/fingerprint"
      body: "*"
    };
  }

  rpc Update(UpdateFingerprintRequest) returns (UpdateFingerprintResponse) {
    option (google.api.http) = {
      put: "/v1/fingerprint/{id}"
      body: "*"
    };
  }

  rpc Delete(DeleteFingerprintRequest) returns (DeleteFingerprintResponse) {
    option (google.api.http) = {
      delete: "/v1/fingerprint/{id}"
    };
  }

  rpc Get(GetFingerprintRequest) returns (GetFingerprintResponse) {
    option (google.api.http) = {
      get: "/v1/fingerprint/{id}"
    };
  }

  rpc Search(SearchFingerprintRequest) returns (SearchFingerprintResponse) {
    option (google.api.http) = {
      post: "/v1/fingerprint/_search"
      body: "*"
    };
  }

  rpc Compare(CompareFingerprintRequest) returns (CompareFingerprintResponse) {
    option (google.api.http) = {
      post: "/v1/fingerprint/_compare"
      body: "*"
    };
  }
}
